색상 및 string 리소스 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">sagak_sagak</string>
+    <string name="app_name">사각사각</string>
 
     <string name="bad_internet">인터넷 연결이 불안정합니다.</string>
 </resources>
